# alibabacloud-rds-openapi-mcp-server

./: .dockerignore  Dockerfile  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
assets/: README_WIN_CN.md  README_WIN_EN.md
component/mydba/: README.md  README_CN.md  config_app.ini  init_config.py  main.py  pyproject.toml
component/mydba/mydba/app/: llm.py
component/mydba/mydba/app/agent/: base.py  chat.py  reflection.py  router.py  using_tool.py
component/mydba/mydba/app/config/: agent.py  config_manager.py  database.py  mcp_tool.py  settings.py
component/mydba/mydba/app/database/: base_database.py  mysql_db.py  sqlite_db.py
component/mydba/mydba/app/message/: memory_history.py  message.py
component/mydba/mydba/app/prompt/: ask_table.py  chat.py  rds_agent.py  reflection.py  router.py  using_tool.py
component/mydba/mydba/app/tool/: base_local_tool.py  interaction.py  mcp_tool.py  mysql_execution.py  tool_manager.py
component/mydba/mydba/common/: encryption.py  global_settings.py  logger.py  session.py  settings.py  stream.py
component/mydba/mydba/mcp/rag/: README.md  embeddings.py  mysql_utils.py  rag_init.py  rag_server.py  settings.py  vector_store.py
component/mydba/mydba/provider/: base.py  command_line.py
component/mydba/shell/: init_env.sh  mydba.sh
docker/: app.py  gunicorn.conf.py  logrotate.conf  logrotate.sh  start.sh  test_logging.py  test_permissions.sh
src/alibabacloud_rds_openapi_mcp_server/: db_service.py  server.py  utils.py
src/alibabacloud_rds_openapi_mcp_server/tools/: rds_custom_common.py  rds_custom_mssql.py
src/alibabacloud_rds_openapi_mcp_server/toolsets/: __init__.py  rds_custom.py  rds_custom_common.py  rds_custom_mssql.py  rds_mssql_custom.py  tool_registry.py  tools.py  toolsets.py
src/rds_openapi_mcp_server/: server.py  utils.py
test/: test_toolsets.py
