[project]
name = "alibabacloud-rds-openapi-mcp-server"
version = "0.1.0"
description = "MCP server for RDS Services via OPENAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-rds20140815>=11.0.0",
    "alibabacloud-vpc20160428>=6.11.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]
