[project]
name = "alibabacloud-rds-openapi-mcp-server"
version = "0.1.0"
description = "MCP server for RDS Services via OPENAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-rds20140815>=11.0.0",
    "alibabacloud-vpc20160428>=6.11.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    {name = "AlibabaCloud RDS"}
]

[project.urls]
Homepage = "https://github.com/aliyun/alibaba-cloud-ops-mcp-server"
Documentation = "https://github.com/aliyun/alibaba-cloud-ops-mcp-server/"
Source = "https://github.com/aliyun/alibaba-cloud-ops-mcp-server.git"
"Bug Tracker" = "https://github.com/aliyun/alibaba-cloud-ops-mcp-server/issues"


[project.scripts]
"alibaba-cloud-ops-mcp-server" = "alibaba-cloud-ops-mcp-server.rds_openapi_mcp_server.server:main"