[project]
name = "mydba"
version = "0.1.0"
description = "阿里云数据库 DBA 智能体"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "cryptography>=45.0.2",
    "exceptiongroup>=1.3.0",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.0",
    "modelscope>=1.26.0",
    "openai>=1.79.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.4",
    "pymysql>=1.1.1",
    "tenacity>=9.1.2",
]
